--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -70,7 +70,8 @@ spring:
     # redis 配置
     redis:
         # 地址
-        host: 192.168.1.30
+        host: localhost
+#        host: 192.168.1.30
         # 端口，默认为6379
         port: 6379
         # 数据库索引
@@ -133,4 +134,4 @@ weixin:
     # 小程序
     mp:
         appId: wx6698dc3d1aa948f4
-        secret: 6b3c711354b8af2f76732012bc92b433
+        secret: 7349baa93697b525079a885225eb11e1
