--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -49,6 +49,10 @@ user:
 
 # Spring配置
 spring:
+    thymeleaf:
+        prefix: classpath:/templates/
+        suffix: .html
+        cache: false
     # 资源信息
     messages:
         # 国际化资源文件路径
@@ -71,7 +75,7 @@ spring:
     redis:
         # 地址
         host: localhost
-#        host: 192.168.1.30
+        #        host: 192.168.1.30
         # 端口，默认为6379
         port: 6379
         # 数据库索引
